--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "algorithm",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,5 @@
     "typescript": "^5.8.2"
   },
   "devDependencies": {},
-  "description": ""
+  "description": "Algorithm practice"
 }
